fix image overflow on card

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,7 @@ code {
   min-width: 150px;
   max-width: 150px;
   min-height: 295px;
+  overflow: hidden;
 }
 
 .name {
